Move/Update Header Underline Desc & Support for Editor + Add Statblock Plugin Support + Fix Legacy Editor Bullet Line Spacing

--- a/obsidian.css
+++ b/obsidian.css
@@ -300,43 +300,6 @@ settings:
 		type: variable-text
 		default: "'Calisto MT', 'Palatino Black', 'Suez One', 'serif'"
 	-
-		title: Heading Underlines
-		description: Remove heading underlines individually. Overridden by the group setting in Note Elements -> Headers
-		id: Spec-Underline-Head
-		type: heading
-		level: 4
-		collapsed: true
-	-
-		title: Hide H1 Underline
-		id: sphd-und-1
-		type: class-toggle
-		default: false
-	-
-		title: Hide H2 heading underline.
-		id: sphd-und-2
-		type: class-toggle
-		default: false
-	-
-		title: Hide H3 heading underline.
-		id: sphd-und-3
-		type: class-toggle
-		default: false
-	-
-		title: Hide H4 heading underline.
-		id: sphd-und-4
-		type: class-toggle
-		default: false
-	-
-		title: Hide H5 heading underline.
-		id: sphd-und-5
-		type: class-toggle
-		default: false
-	-
-		title: Hide H6 heading underline.
-		id: sphd-und-6
-		type: class-toggle
-		default: false
-	-
         title: Heading Size
         id: Spec-Size-Head
         type: heading
@@ -540,6 +503,43 @@ settings:
 		format: hex
 		default-dark: '#2e333d'
 		default-light: '#8a92a3'
+    -
+		title: Heading Underlines
+		description: Remove heading underlines individually. Overridden by "Hide Header Underline" in the section Note Elements > Headers.
+		id: Spec-Underline-Head
+		type: heading
+		level: 4
+		collapsed: true
+	-
+		title: Hide H1 Underline
+		id: sphd-und-1
+		type: class-toggle
+		default: false
+	-
+		title: Hide H2 underline
+		id: sphd-und-2
+		type: class-toggle
+		default: false
+	-
+		title: Hide H3 underline
+		id: sphd-und-3
+		type: class-toggle
+		default: false
+	-
+		title: Hide H4 underline
+		id: sphd-und-4
+		type: class-toggle
+		default: false
+	-
+		title: Hide H5 underline
+		id: sphd-und-5
+		type: class-toggle
+		default: false
+	-
+		title: Hide H6 underline
+		id: sphd-und-6
+		type: class-toggle
+		default: false
     -
         title: Workspace
         id: WS-CSS
@@ -2158,7 +2158,6 @@ body:not(.its-i) svg.clock-glyph {
     --sphd-ed-fs-5: 20px;
     --sphd-ed-fs-6: 18px;
 
-
     /**/
     --em-pre-f: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     --em-ed-f: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -2166,11 +2165,6 @@ body:not(.its-i) svg.clock-glyph {
     --b-ed-f: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     --del-pre-f: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     --del-ed-f: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-
-    /*Plugin: 5e Statblock*/
-    --statblock-primary-color: var(--soft-text) !important;
-    --statblock-background-color: transparent;
-    --statblock-bar-color: var(--accent);
 }
 
 .theme-dark {
@@ -3821,7 +3815,7 @@ ul li > p {
     content:'';
     border-left: var(--b-line) solid var(--accent);
     position: absolute;
-    left: .2em;
+    left: .7em;
     top: -5px;
     bottom: -4px; 
 }
@@ -4007,9 +4001,9 @@ body.check-bg:not(.chkbx-strike) li.task-list-item.is-checked > code {
 }
 
 /* Checkbox Text Normal */
-.check-text .markdown-source-view.mod-cm6 .HyperMD-task-line[data-task],
-.check-text.check-text ul li:not([data-task="x"]).task-list-item.is-checked {
-    color: var(--text-normal) !important;
+body.check-text .markdown-source-view.mod-cm6 .HyperMD-task-line[data-task],
+body.check-text.check-text ul li:not([data-task="x"]).task-list-item.is-checked {
+    color: var(--text-normal);
     font-weight: unset;
 }
 
@@ -4355,7 +4349,8 @@ body.check-bg:not(.chkbx-strike) li.task-list-item.is-checked > code {
     background: rgba(var(--chbx-b), 20%); 
 }
 
-
+/*Hide Border For LP (Aligns Items Strangely) */
+.check-bg .markdown-source-view.mod-cm6 .HyperMD-task-line[data-task] { border: 0; }
 
 
 /*Table Checkboxes*/
@@ -7355,35 +7350,47 @@ g.classGroup line {
 
 
 /*--Plugin: 5e Statblock--*/
-.obsidian-statblock-plugin .creature-heading > .name {
-    font-family: var(--font) !important;
-    font-size: 1.8em !important;
-    color: var(--headers) !important;
+body.theme-dark,
+body.theme-light {
+    /*Plugin: 5e Statblock*/
+    --statblock-primary-color: var(--text);
+    --statblock-background-color: var(--note);
+    --statblock-bar-color: var(--accent);
+    --statblock-rule-color: var(--accent);
+    --statblock-alt: var(--td);
 }
 
-.obsidian-statblock-plugin > .content-wrap {
-    font-size: 1.1em !important;
-    background-color: var(--embed-bg) !important;
-    border: none !important;
-    box-shadow: none !important;
-}
-
-.obsidian-statblock-plugin .property-name {
+body .obsidian-statblock-plugin .heading {
+    font-family: var(--font);
     color: var(--headers);
-    font-family: var(--font-monospace);
-    font-style: normal !important;
+    font-size: var(--f-s-h);
+    font-weight: var(--f-w-h);
+    font-variant: unset;
+}
+
+body .obsidian-statblock-plugin > .statblock-content {
+    border: none;
+    box-shadow: 0px 0px 20px var(--outline);
+    font-family: inherit;
+}
+body .statblock-item-container:nth-child(odd) .line,
+body .statblock-item-container:nth-child(odd) .property {
+    background: var(--statblock-alt);
+}
+
+body .obsidian-statblock-plugin .property-name {
+    color: var(--headers);
+    font-style: normal;
     font-size: var(--f-text);
 }
-.obsidian-statblock-plugin .section-header {
-    border: none !important;
-    color: var(--accent2) !important;
-    font-weight: 900 !important;
-    font-variant: normal !important;
+body .obsidian-statblock-plugin .section-header {
+    border: none;
+    color: var(--accent2-lite);
+    font-weight: var(--f-w-h);
     text-transform: uppercase;
-    font-size: .9em !important;
 }
-.obsidian-statblock-plugin > .bar {
-    border: none !important;
+body .obsidian-statblock-plugin > .bar {
+    border: none;
 }
 
 .obsidian-statblock-plugin .subheading {
@@ -8020,6 +8027,12 @@ body .block-ref-count:hover {
 .sphd-und-4 h4:after,
 .sphd-und-5 h5:after,
 .sphd-und-6 h6:after,
+.sphd-und-1 .cm-s-obsidian pre.HyperMD-header-1::after,
+.sphd-und-2 .cm-s-obsidian pre.HyperMD-header-2::after,
+.sphd-und-3 .cm-s-obsidian pre.HyperMD-header-3::after,
+.sphd-und-4 .cm-s-obsidian pre.HyperMD-header-4::after,
+.sphd-und-5 .cm-s-obsidian pre.HyperMD-header-5::after,
+.sphd-und-6 .cm-s-obsidian pre.HyperMD-header-6::after,
 .h-line h1:after,
 .h-line h2:after,
 .h-line h3:after,
